--- a/index.html
+++ b/index.html
@@ -594,19 +594,19 @@
                                 prefer.
                             </p>
                             <div class="social">
-                                <a href="" class="social-link">
+                                <a href="#!" class="social-link">
                                     <img
                                         src="./assets/img/facebook.svg"
                                         alt="Facebook"
                                     />
                                 </a>
-                                <a href="" class="social-link">
+                                <a href="#!" class="social-link">
                                     <img
                                         src="./assets/img/twitter.svg"
                                         alt="twitter"
                                     />
                                 </a>
-                                <a href="" class="social-link">
+                                <a href="#!" class="social-link">
                                     <img
                                         src="./assets/img/linkin.svg"
                                         alt="linkin"
